@@ -117,6 +117,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Jens Erat
   Peter Rochen
   Oota Toshiya
+  ribbon
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
