@@ -183,7 +183,7 @@
 
 // columns/Col*
 #define STRING_COLUMN_BAD_NAME       "認識できないカラム名 '{1}'。"
-#define STRING_COLUMN_BAD_FORMAT     "Unrecognized column format '{1}.{2}'"
+#define STRING_COLUMN_BAD_FORMAT     "認識出来ないカラム形式 '{1}.{2}'"
 #define STRING_COLUMN_LABEL_TASKS    "Tasks"
 #define STRING_COLUMN_LABEL_DEP      "Depends"
 #define STRING_COLUMN_LABEL_DEP_S    "Dep"
@@ -337,18 +337,18 @@
 #define STRING_CMD_GHISTORY_USAGE_A  "Shows a graphical report of task history, by year"
 #define STRING_CMD_GHISTORY_YEAR     "Year"
 #define STRING_CMD_GHISTORY_MONTH    "Month"
-#define STRING_CMD_GHISTORY_NUMBER   "Number Added/Completed/Deleted"
+#define STRING_CMD_GHISTORY_NUMBER   "追加/完了/削除されたタスク数"
 #define STRING_CMD_UNIQUE_USAGE      "Generates lists of unique attribute values"
 #define STRING_CMD_UNIQUE_MISSING    "An attribute must be specified.  See 'task _columns'."
 #define STRING_CMD_UNIQUE_VALID      "You must specify an attribute or UDA."
 
 #define STRING_CMD_DONE_USAGE        "Marks the specified task as completed"
 #define STRING_CMD_DONE_CONFIRM      "task {1} '{2}' を完了?"
-#define STRING_CMD_DONE_TASK         "完了した task {1} '{2}'."
+#define STRING_CMD_DONE_TASK         "task {1} '{2}' を完了します。"
 #define STRING_CMD_DONE_NO           "Task は完了しなかった。"
 #define STRING_CMD_DONE_NOTPEND      "Task {1} '{2}' is neither pending nor waiting."
-#define STRING_CMD_DONE_1            "完了した {1} task。"
-#define STRING_CMD_DONE_N            "完了した {1} task。"
+#define STRING_CMD_DONE_1            "{1} task を完了。"
+#define STRING_CMD_DONE_N            "{1} task を完了。"
 
 #define STRING_CMD_PROJECTS_USAGE    "Shows all project names used"
 #define STRING_CMD_PROJECTS_USAGE_2  "Shows only a list of all project names used"
@@ -364,7 +364,7 @@
 #define STRING_CMD_SUMMARY_AVG_AGE   "Avg age"
 #define STRING_CMD_SUMMARY_COMPLETE  "Complete"
 #define STRING_CMD_SUMMARY_NONE      "(none)"
-#define STRING_CMD_COUNT_USAGE       "Counts matching tasks"
+#define STRING_CMD_COUNT_USAGE       "一致した task をカウント"
 #define STRING_CMD_GET_USAGE         "DOM Accessor"
 #define STRING_CMD_GET_NO_DOM        "No DOM reference specified."
 
@@ -525,9 +525,9 @@
 #define STRING_CMD_MODIFY_REC_ALWAYS "You cannot remove the recurrence from a recurring task."
 #define STRING_CMD_MODIFY_TASK       "Modifying task {1} '{2}'."
 #define STRING_CMD_MODIFY_TASK_R     "Modifying recurring task {1} '{2}'."
-#define STRING_CMD_MODIFY_1          "Modified {1} task."
-#define STRING_CMD_MODIFY_N          "Modified {1} tasks."
-#define STRING_CMD_MODIFY_NO         "Task not modified."
+#define STRING_CMD_MODIFY_1          "{1} task を変更。"
+#define STRING_CMD_MODIFY_N          "{1} task を変更。"
+#define STRING_CMD_MODIFY_NO         "Task は変更されませんでした。"
 #define STRING_CMD_MODIFY_CONFIRM    "Modify task {1} '{2}'?"
 #define STRING_CMD_MODIFY_RECUR      "This is a recurring task.  Do you want to modify all pending recurrences of this same task?"
 #define STRING_CMD_MODIFY_NEED_TEXT  "Additional text must be provided."
@@ -612,12 +612,12 @@
 #define STRING_CONFIG_READ_INCLUDE   "インクルードファイル '{1}' が読み込めません。"
 #define STRING_CONFIG_INCLUDE_PATH   "Can only include files with absolute paths, not '{1}'"
 #define STRING_CONFIG_BAD_ENTRY      "Malformed entry '{1}' in config file."
-#define STRING_CONFIG_BAD_WRITE      "Could not write to '{1}'."
+#define STRING_CONFIG_BAD_WRITE      "'{1}' へ書き込みできません。"
 #define STRING_CONFIG_DEPRECATED_COL "Your .taskrc file contains reports with deprecated columns.  Please check for entry_time, start_time or end_time in:"
 #define STRING_CONFIG_DEPRECATED_VAR "Your .taskrc file contains variables that are deprecated:"
 
 // Context
-#define STRING_CONTEXT_CREATE_RC     "A configuration file could not be found in {1}\n\nWould you like a sample {2} created, so taskwarrior can proceed?"
+#define STRING_CONTEXT_CREATE_RC     "設定ファイルが {1} 中で見つけられませんでした。\n\nサンプルの {2} を作って taskwarrior が処理できるようにして良いですか?"
 #define STRING_CONTEXT_NEED_RC       "Cannot proceed without rc file."
 #define STRING_CONTEXT_RC_OVERRIDE   "TASKRC override: {1}"
 #define STRING_CONTEXT_DATA_OVERRIDE "TASKDATA override: {1}"
@@ -770,8 +770,8 @@
 
 // Feedback
 #define STRING_FEEDBACK_NO_TASKS     "タスクがない。"
-#define STRING_FEEDBACK_NO_TASKS_SP  "No tasks specified."
-#define STRING_FEEDBACK_NO_MATCH     "一致したものはない。"
+#define STRING_FEEDBACK_NO_TASKS_SP  "タスクが1つも指定されていません。"
+#define STRING_FEEDBACK_NO_MATCH     "一致したものはありません。"
 #define STRING_FEEDBACK_TASKS_SINGLE "(1 タスク)"
 #define STRING_FEEDBACK_TASKS_PLURAL "({1} タスク)"
 #define STRING_FEEDBACK_DELETED      "{1} will be deleted."
@@ -866,7 +866,7 @@
 #define STRING_TASK_VALID_BEFORE     "Warning: You have specified that the '{1}' date is after the '{2}' date."
 #define STRING_TASK_VALID_REC_DUE    "A recurring task must also have a 'due' date."
 #define STRING_TASK_VALID_RECUR      "The recurrence value '{1}' is not valid."
-#define STRING_TASK_SAFETY_VALVE     "This command has no filter, and will modify all tasks.  Are you sure?"
+#define STRING_TASK_SAFETY_VALVE     "このコマンドにはフィルタが設定されていないため全タスクが変更されます。よいですか?"
 #define STRING_TASK_SAFETY_FAIL      "コマンドの実行は中止された。"
 #define STRING_TASK_SAFETY_ALLOW     "You did not specify a filter, and with the 'allow.empty.filter' value, no action is taken."
 #define STRING_TASK_INVALID_DUR      "The duration value '{1}' is not supported."
